--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -2,9 +2,9 @@
 - name: dotfiles | make ~/.config
   file: path=~/.config state=directory
 
-###   - name: dotfiles | symlink nvim to vim
-###     file: path=~/.config/nvim src=~/.vim state=link force=yes
-###   
+- name: dotfiles | symlink nvim to vim
+  file: path=~/.config/nvim src=~/.vim state=link force=yes
+
 ###   - name: dotfiles | create backup directory
 ###     file: path=~/.backups state=directory
 ###   
