Added command-T build commands.
Change-Id: I31954b52b38a996a6bfbf41c9cb283fb61794893

--- a/linux.yml
+++ b/linux.yml
@@ -3,7 +3,7 @@
   roles:
     - { role: dotfiles, tags: dotfiles }
       #- { role: terminfo, tags: terminfo }
-    # - { role: vim, tags: vim }
+    - { role: vim, tags: vim }
   vars:
     command_t_bundle: ext.so
     http_proxy: "http://fwdproxy:8080"
