--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,36 @@
 [submodule "roles/dotfiles/files/.vim/pack/bundle/start/pinnacle"]
 	path = roles/dotfiles/files/.vim/pack/bundle/start/pinnacle
 	url = https://github.com/wincent/pinnacle.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/base16-vim"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-abolish"]
+	path = roles/dotfiles/files/.vim/pack/vim-abolish/opt/vim-abolish
+	url = https://github.com/tpope/vim-abolish.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-repeat"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/vim-repeat
+	url = https://github.com/tpope/vim-repeat.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-surround"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-speeddating"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/vim-speeddating
+	url = https://github.com/tpope/vim-speeddating.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-eunuch"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/vim-eunuch
+	url = https://github.com/tpope/vim-eunuch.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/vim-fugitive"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "roles/dotfiles/files/.vim/pack/bundle/start/terminus"]
+	path = roles/dotfiles/files/.vim/pack/bundle/start/terminus
+	url = https://github.com/wincent/terminus.git
+[submodule "roles/dotfiles/files/.vim/pack/deoplete/opt/deoplete.nvim"]
+	path = roles/dotfiles/files/.vim/pack/deoplete/opt/deoplete.nvim
+	url = https://github.com/Shougo/deoplete.nvim.git
+[submodule "roles/dotfiles/files/.vim/pack/nerdtree/opt/nerdtree"]
+	path = roles/dotfiles/files/.vim/pack/nerdtree/opt/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "roles/dotfiles/files/.vim/pack/undotree/opt/undotree"]
+	path = roles/dotfiles/files/.vim/pack/undotree/opt/undotree
+	url = https://github.com/mbbill/undotree.git
