Further zsh and vim configuration, starting to look good.
Change-Id: Idb6d10e5ae2abdd57436ac4d70b26ed19277403d

--- a/roles/dotfiles/defaults/main.yml
+++ b/roles/dotfiles/defaults/main.yml
@@ -27,9 +27,9 @@ dotfile_files:
   # - .tmux.conf
   # - .urlview
   - .vim
-  # - .zsh
+  - .zsh
   # - .zshenv
-  # - .zshrc
+  - .zshrc
 
 dotfile_templates:
   # - .corpusrc
