--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,12 @@
 [submodule "roles/dotfiles/files/.vim/pack/undotree/opt/undotree"]
 	path = roles/dotfiles/files/.vim/pack/undotree/opt/undotree
 	url = https://github.com/mbbill/undotree.git
+[submodule "roles/dotfiles/files/.zsh/base16-shell"]
+	path = roles/dotfiles/files/.zsh/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
+[submodule "roles/dotfiles/files/.zsh/zsh-autosuggestions"]
+	path = roles/dotfiles/files/.zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "roles/dotfiles/files/.zsh/zsh-syntax-highlighting"]
+	path = roles/dotfiles/files/.zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
